# deepseek_mcp_tasks

./: .gitignore  Cargo.toml  DEEPSEEK_MCP_INTEGRATION.md  EMAIL_FORMATS.md  README.md  README_DEEPSEEK_INTEGRATION.md  env_template.txt  mcp_todo_task
examples/: sample_report.md  sample_report.txt
src/: config.rs  deepseek_client.rs  logger.rs  main.rs  mcp_client.rs  table_formatter.rs  tooling.rs
