[package]
name = "deepseek_mcp_tasks"
version = "0.1.0"
edition = "2021"
description = "A Rust application that integrates with MCP todo server and uses DeepSeek models"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.15"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
