[package]
name = "deepseek_mcp_tasks"
version = "0.1.0"
edition = "2024"
description = "A Rust application that integrates with MCP todo server"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.20.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
rmcp = { version = "0.5.0", features = ["client", "transport-child-process"] }
genai = "0.3.5"
