[package]
name = "deepseek_mcp_tasks"
version = "0.1.0"
edition = "2024"
description = "A Rust application that integrates with MCP todo server"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.20.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
rmcp = { version = "0.5.0", features = ["client", "transport-child-process"] }
genai = "0.3.5"
reqwest = { version = "0.12", features = ["json"] }
